main menu opprettet activity button til quiz & gallery sort algoritme i gallery 3 bilder med tekst i gallery

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+
+        <activity android:name=".activities.GalleryActivity" android:exported="false">
+
+        </activity>
+
+        <activity android:name=".activities.QuizActivity" android:exported="false">
+
+        </activity>
+
+
+        <activity android:name=".app.QuizApplication">
+
+
+        </activity>
+
+
     </application>
 
 </manifest>
